# hello-world

./: .editorconfig  .gitignore  build.ps1  build.sh  hello-world.code-workspace
cabal/: README.md  cabal-hello.cabal  cabal.project  structure.txt
cabal/app/: Functions.hs
cabal/app/Command/: Details.hs  Greeter.hs  Number.hs
cabal/src/CLI/Function/: Details.hs  Greeter.hs  Number.hs  Random.hs
cabal/src/Goodbye/: World.hs
cabal/src/Hello/: World.hs
cabal/tests/: GoodbyeWorldTests.hs  HelloWorldTests.hs
cargo/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
cargo/crates/chuchu/: Cargo.toml
cargo/crates/chuchu/src/: main.rs
cargo/crates/date-today/: Cargo.toml
cargo/crates/date-today/src/custom/: date_today.rs
cargo/crates/hello-cargo/: Cargo.toml
cargo/crates/hello-cargo/src/: main.rs
cargo/crates/hello-world/: Cargo.toml
cargo/crates/numbers-lib/: Cargo.toml
cargo/crates/numbers-lib/tests/: numbers_lib_tests.rs
cargo/crates/numbers-utils/: Cargo.toml
cargo/crates/numbers-utils/src/operations/: factor_utils.rs  factorial_utils.rs  fibonacci_utils.rs
cargo/crates/numbers-utils/tests/: numbers_lib_tests.rs
cargo/crates/numbers-utils/tests/operations/: factor_utils_tests.rs  factorial_utils_tests.rs  fibonacci_utils_tests.rs  mod.rs
cargo/crates/translator/: Cargo.toml
cargo/crates/translator/src/: lib.rs
cargo/crates/translator/tests/: translator_test.rs
cargo/src/: functions.rs  hello_world.rs  lib.rs  main.rs
cargo/src/cli_function/banner/: mod.rs
cargo/src/cli_function/details/: mod.rs
cargo/src/cli_function/greeter/: mod.rs
cargo/src/cli_function/number/: mod.rs
cargo/src/cli_function/random/: mod.rs
cargo/src/cli_functions/details/: mod.rs
cargo/src/cli_functions/greeter/: mod.rs
cargo/src/cli_functions/number/: mod.rs
cargo/src/cli_functions/random/: mod.rs
cargo/src/goodbye_world/: mod.rs
cargo/src/hello_world/: mod.rs
cargo/src/numbers_lib/: mod.rs
cargo/tests/: goodbye_world_tests.rs  hello_world_test.rs  hello_world_tests.rs  numbers_tests.rs
csharp/: CSharpHello.sln  Directory.Build.props  DotnetHello.sln  README.md  build.cake
csharp/.config/: dotnet-tools.json
csharp/app/App/: App.csproj  Functions.cs  Main.cs
csharp/app/Command/Banner/: Main.cs
csharp/app/Command/Details/: Details.csproj  Main.cs
csharp/app/Command/Greeter/: Main.cs
csharp/app/Command/Number/: Main.cs
csharp/app/Command/Random/: Random.cs
csharp/modules/Date.Today/Date.Today.App/: DateToday.csproj  Main.cs
csharp/src/CLI.Function/: CLIFunction.csproj
csharp/src/CLI.Function/Banner/: Banner.cs
csharp/src/Goodbye.World/: GoodbyeWorld.cs
csharp/src/Hello.World/: HelloWorld.cs
csharp/tests/Goodbye.World.Tests/: GoodbyeWorldTests.cs  GoodbyeWorldTests.csproj
csharp/tests/Hello.World.Tests/: HelloWorldTests.cs  HelloWorldTests.csproj
dotnet/: Directory.Build.props  Directory.Build.targets  DotnetHello.sln  Hello.World.sln  README.md  dotnet.sln
dotnet/app/App/: App.csproj  Functions.cs  Main.cs
dotnet/src/: Hello.World.csproj  HelloWorld.cs
dotnet/src/App/: App.csproj
dotnet/src/Hello.World/: HelloWorld.cs  HelloWorld.csproj
dotnet/src/HelloWorld/: HelloWorld.cs  HelloWorld.csproj  Main.cs
dotnet/src/NumbersLib/: NumbersLib.csproj
dotnet/test/: Hello.World.Test.csproj  HelloWorldTests.cs
dotnet/test/HelloWorldTests/: HelloWorldTests.cs  HelloWorldTests.csproj
dotnet/tests/Hello.World.Tests/: HelloWorldTests.csproj
dotnet/tests/HelloWorldTests/: HelloWorldTests.cs  HelloWorldTests.csproj
dotnet/tests/NumbersLibTests/: NumbersLibTests.cs  NumbersLibTests.csproj
gradle/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/app/: build.gradle.kts
gradle/gradle/: libs.versions.toml
gradle/src/app/: build.gradle.kts
gradle/subprojects/date-today/: build.gradle.kts
gradle/subprojects/hello-gradle/: build.gradle.kts
gradle/subprojects/numbers-lib/: build.gradle.kts
gradle/subprojects/numbers-utils/: build.gradle.kts
haskell/: README.md  cabal.project  fourmolu.yaml  haskell-hello.cabal
haskell/app/: Functions.hs  Main.hs
haskell/app/Command/: Banner.hs  Details.hs  Greeter.hs  Number.hs  Random.hs
haskell/src/CLI/Function/: Banner.hs  Details.hs  Greeter.hs  Number.hs  Random.hs
haskell/src/Goodbye/: World.hs
haskell/src/Hello/: World.hs
haskell/tests/: GoodbyeWorldTests.hs  HelloWorldTests.hs
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/gradle/: libs.versions.toml
kotlin/subprojects/date-today/: build.gradle.kts
kotlin/subprojects/hello-gradle/: build.gradle.kts
kotlin/subprojects/hello-kotlin-too/: build.gradle.kts
kotlin/subprojects/numbers-utils/: build.gradle.kts
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/crates/date-today/src/custom/: date_today.rs
rust/crates/hello-cargo/: Cargo.toml
rust/crates/hello-rust-too/: Cargo.toml
rust/crates/hello-rust-too/src/: main.rs
rust/crates/hello-rust/src/: main.rs
rust/crates/numbers-utils/src/operations/: factorial_utils.rs  mod.rs
rust/crates/numbers-utils/tests/operations/: factorial_utils_tests.rs  fibonacci_utils_tests.rs
rust/crates/translator/: Cargo.toml
rust/crates/translator/src/: lib.rs
rust/crates/translator/tests/: translator_test.rs
rust/src/: hello.rs  hello_world.rs  lib.rs  main.rs
rust/src/cli_function/banner/: mod.rs
rust/src/cli_function/details/: mod.rs
rust/src/goodbye_world/: mod.rs
rust/src/hello_world/: mod.rs
rust/tests/: goodbye_world_tests.rs  hello_test.rs  hello_world_test.rs  hello_world_tests.rs
swift/: .swiftformat  Package.resolved  Package.swift
swift/Sources/App/: Main.swift
swift/Sources/HelloWorld/: HelloWorld.swift  main.swift
swift/Tests/HelloWorldTests/: HelloWorldTests.swift
swiftpm/: Package.swift  README.md
swiftpm/Sources/HelloWorld/: HelloWorld.swift
swiftpm/Sources/NumbersLib/: NumbersLib.swift
swiftpm/Tests/HelloWorldTests/: HelloWorldTests.swift
swiftpm/Tests/NumbersLibTests/: NumbersLibTests.swift
(+106 files in other folders)
