cabal-version:   3.4
name:            cabal-hello
version:         1.0.0.0
license:         MIT
license-file:    LICENSE.md
copyright:       2024 AlterSabeh
maintainer:      betamaximum22@gmail.com
author:          AlterSabeh
bug-reports:     https://github.com/altersabeh/hello-world/issues
synopsis:        Hello World program in Cabal
description:
    Please see the README on GitHub at <https://github.com/altersabeh/hello-world#README>

category:        command-line
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/altersabeh/hello-world

library
    exposed-modules:

        Hello.World
        Goodbye.World

    hs-source-dirs:   srcc
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.0,
        time ^>=1.12.2

library goodbye-world
    exposed-modules:  Goodbye.World
    hs-source-dirs:   src
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.0,
        time ^>=1.12.2

library hello-world
    exposed-modules:  Hello.World
    hs-source-dirs:   src
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.2.0,
        time ^>=1.12.2

library cli-function
    exposed-modules:
        CLI.Function.Banner
        CLI.Function.Details
        CLI.Function.Greeter
        CLI.Function.Number
        CLI.Function.Random

    hs-source-dirs:   src
    other-modules:
        Paths_cabal_hello
        Hello.World
        Goodbye.World

    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello,
        base ^>=4.18.2.0,
        time ^>=1.12.2,
        numbers-utils ^>=1.0.0,
        translator ^>=1.0.0

executable cabal-hello
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Paths_cabal_hello
        Functions

    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:cli-function,
        base ^>=4.18.2.0

executable banner
    main-is:          Command/Banner.hs
    hs-source-dirs:   app
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:cli-function,
        base ^>=4.18.2.0

executable details
    main-is:          Command/Details.hs
    hs-source-dirs:   app
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:cli-function,
        base ^>=4.18.2.0

executable greeter
    main-is:          Command/Greeter.hs
    hs-source-dirs:   app
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:cli-function,
        base ^>=4.18.2.0

executable number
    main-is:          Command/Number.hs
    hs-source-dirs:   app
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:cli-function,
        base ^>=4.18.2.0

executable random
    main-is:          Command/Random.hs
    hs-source-dirs:   app
    other-modules:    Paths_cabal_hello
    autogen-modules:  Paths_cabal_hello
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:cli-function,
        base ^>=4.18.2.0

test-suite hello-world-test
    type:             exitcode-stdio-1.0
    main-is:          HelloWorldTests.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:hello-world,
        base ^>=4.18.2.0,
        time ^>=1.12.2,
        tasty ^>=1.4.3,
        tasty-hunit ^>=0.10.1

test-suite goodbye-world-test
    type:             exitcode-stdio-1.0
    main-is:          GoodbyeWorldTests.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        cabal-hello:goodbye-world,
        base ^>=4.18.2.0,
        time ^>=1.12.2,
        tasty ^>=1.4.3,
        tasty-hunit ^>=0.10.1
