[package]
name = "cargo-hello"
version = "1.0.0"
description = "Hello World program in Cargo"
license = "MIT"
repository = "https://github.com/altersabeh/hello-world"
homepage = "https://github.com/altersabeh/hello-world/tree/main/cargo#README"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-hello"
path = "src/main.rs"

[lib]
path = "src/hello_world.rs"
doctest = false

[dependencies]
chrono = "0.4.37"
