[workspace]
resolver = "2"
members = ["crates/*", "."]

[workspace.package]
version = "1.0.0"
license = "MIT"
repository = "https://github.com/altersabeh/hello-world"
homepage = "https://github.com/altersabeh/hello-world/tree/main/cargo#cargo---cargo-hello"
authors = ["Altersabeh"]
edition = "2021"
keywords = ["command-line"]

[workspace.dependencies]
chrono = "0.4.37"
colored = "2.1.0"
num-bigint = "0.4.4"
rand = "0.8.5"
rstest = "0.18.2"
numbers-utils = { path = "crates/numbers-utils" }
translator = { path = "crates/translator" }
cargo-hello = { path = "." }

[package]
name = "cargo-hello"
version.workspace = true
description = "Hello World program in Cargo"
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
default-run = "cargo-hello"

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "cargo-hello"
test = false

[[bin]]
name = "banner"
test = false

[[bin]]
name = "number"
test = false

[[bin]]
name = "greeter"
test = false

[[bin]]
name = "details"
test = false

[[bin]]
name = "random"
test = false

[dependencies]
chrono = { workspace = true }
numbers-utils = { workspace = true }
translator = { workspace = true }

[dev-dependencies]
colored = { workspace = true }
