[workspace]
resolver = "2"
members = ["crates/*", "."]

[workspace.package]
version = "1.0.0"
license = "MIT"
repository = "https://github.com/altersabeh/hello-world"
homepage = "https://github.com/altersabeh/hello-world/tree/main/cargo#cargo---cargo-hello"
authors = ["Altersabeh"]
edition = "2021"
keywords = ["command-line"]

[workspace.dependencies]
chrono = "0.4.37"
colored = "2.1.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
rand = "0.8.5"
rstest = "0.18.2"
numbers-utils = { path = "crates/numbers-utils" }
translator = { path = "crates/translator" }
prog = { path = "." }

[package]
name = "prog"
version.workspace = true
description = "Hello World program in Cargo"
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
keywords.workspace = true
default-run = "rust-hello"

[lib]
path = "src/lib.rs"
doctest = false
test = false

[[bin]]
name = "rust-hello"
path = "src/main.rs"
test = false

[[bin]]
name = "banner"
test = false

[[bin]]
name = "number"
test = false

[[bin]]
name = "greeter"
test = false

[[bin]]
name = "details"
test = false

[[bin]]
name = "random"
test = false

[dependencies]
chrono = { workspace = true }
numbers-utils = { workspace = true }
translator = { workspace = true }

[dev-dependencies]
colored = { workspace = true }
