[package]
name = "hello-cargo"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true

[[bin]]
name = "hello-cargo"
test = false

[dependencies]
cargo-hello = { workspace = true }
