[package]
version = "0.0.0"
name = "numbers-utils"
description = "A library for working with numbers"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false
test = false

[[bin]]
name = "factorial"
test = false

[[bin]]
name = "fibonacci"
test = false

[dependencies]
num-bigint = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
colored = { workspace = true }
chrono = { workspace = true }
