[package]
name = "hello-rust"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true

[[bin]]
name = "hello-rust"
test = false

[dependencies]
cargo-hello = { workspace = true }
